fix: clients & suppliers lists tags scrollbar hided, scrolling available

--- a/src/assets/css/utilities.css
+++ b/src/assets/css/utilities.css
@@ -38,3 +38,26 @@
     ". . . . . . . . . . . . . . . . . . . . "
   ;
 }
+
+/* Hide scrollbar */
+.scrollbar-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+.scrollbar-hidden::-webkit-scrollbar-track {
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  background-color: transparent;
+}
+.scrollbar-hidden::-webkit-scrollbar {
+  width: 0 !important;
+  height: 0 !important;
+  background-color: transparent;
+}
+.scrollbar-hidden::-webkit-scrollbar-thumb {
+  width: 0 !important;
+  height: 0 !important;
+  background-color: transparent;
+}
+/*nobody needs this little scrollbar corner, I mean really, get rid of it haha*/
+.scrollbar-hidden::-webkit-scrollbar-corner { display: none; height: 0px; width: 0px; }
